<resources>
    <string name="app_name">Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="type_note_here">Type note here ...</string>
    <string name="add_note">add_Note</string>
    <string name="back_to_all_notes">back to all notes</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_want_to_delete_this_note">Are you sure want to delete this note?</string>
    <string name="cancel">Cancel</string>
</resources>