<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="56dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/background_add_button"
                android:padding="5dp"
                android:src="@drawable/ic_back"
                android:tint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_add_button"
                android:padding="5dp"
                android:src="@drawable/ic_done"
                android:tint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/NoteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:includeFontPadding="false"
                android:paddingStart="@dimen/padding_NoteTitle"
                android:paddingTop="@dimen/padding_NoteTitle"
                android:paddingBottom="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/textSize_Title"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/back_button" />

            <TextView
                android:id="@+id/text_DataTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_NoteTitle"
                android:text="10.20.2020"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/textSize_DataTime"
                app:layout_constraintEnd_toEndOf="@id/NoteTitle"
                app:layout_constraintStart_toStartOf="@id/NoteTitle"
                app:layout_constraintTop_toBottomOf="@id/NoteTitle" />

            <EditText
                android:id="@+id/Note_SubTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textImeMultiLine"
                android:padding="@dimen/padding_NoteTitle"
                android:paddingStart="@dimen/padding_NoteTitle"
                android:paddingEnd="@dimen/padding_NoteTitle"
                android:textColor="@color/colorTextSubtitle"
                android:textColorHint="@color/colorTextHint"
                android:textSize="@dimen/textSize_subTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_DataTime" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textImeMultiLine"
                android:minHeight="100dp"
                android:paddingStart="@dimen/padding_NoteTitle"
                android:paddingTop="@dimen/padding_NoteTitle"
                android:paddingEnd="@dimen/padding_NoteTitle"
                android:textColor="@color/white"
                android:textColorHint="@color/colorTextHint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/Note_SubTitle">

            </EditText>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>